# Paper_E-Dohad-Apriori

./: README.md  main.py  pyproject.toml
data/rules/: rules_0.csv  rules_1.csv  rules_2.csv  rules_3.csv  rules_4.csv  rules_5.csv  rules_6.csv  rules_7.csv
dev/: __init__.py  __main__.py
dev/apriori/: __init__.py  apriori.py  utils.py
dev/kmeans/: __init__.py  kmeans.py  utils.py
dev/preprocess/: __init__.py  preprocess.py  utils.py
dev/preprocessing/: preprocess.py  utils.py
